--- a/index.css
+++ b/index.css
@@ -1,3 +1,19 @@
-#body {
-    color:aqua
+body{
+    background-color: black;
 }
+
+#div1{
+    display: block;
+    margin: auto;
+    height: auto;
+    text-align: center;
+    color: white;
+    font-size: 1.5rem;
+    font-family: "Space Mono", monospace;
+}
+
+#mypfp{
+    max-width: 20%;
+    border-radius: 10px;
+    }
+
