--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,27 @@
-body{
-    background-color: black;
-
-}
-@media only screen and (max-width: 600px) {
-    #div1 {
-        font-size: 13px;
-    }
-}
-
-#div1{
-    display: block;
-    margin: auto;
-    height: auto;
-    text-align: center;
-    color: #f2f2f2;
-    font-size: 20px;
+body {
+    background-color: #1a1a1a;
+    overflow: hidden;
+  }
+  
+  #div1 {
+    display: flex;
+    flex-direction: column; /* add this to set flex direction to column */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: #ffcc99;
+    font-size: 16px;
     white-space: auto;
     font-family: "Space Mono", monospace;
-}
+  }
+  
+  @media only screen and (max-width: 600px) {
+    #div1 {
+      font-size: 13px;
+    }
+  }
+  
+  
 /**
 #mypfp{
     max-width: 20%;
@@ -25,28 +29,3 @@ body{
     }
 **/
 
-
-
-#nav-links {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  #nav-links li {
-    margin-right: 20px;
-  }
-  
-  #nav-links li a {
-    color: #ffa64d;
-    text-decoration: none;
-    font-family: 'Space Mono', monospace;
-    font-size: 20px;
-    transition: color 0.3s ease;
-  }
-  
-  #nav-links li a:hover {
-    color: #f2f2f2;
-  }
-  
