--- a/css/navlink.css
+++ b/css/navlink.css
@@ -10,7 +10,7 @@
   }
   
   #nav-links li a {
-    color: #ffa64d;
+    color: #ffd9b3;
     text-decoration: none;
     font-family: 'Space Mono', monospace;
     font-size: 20px;
@@ -18,5 +18,11 @@
   }
   
   #nav-links li a:hover {
-    color: #f2f2f2;
+    color: #b30059;
+    font-size: 25px;
+    transition: font-size 0.25s ease-in-out;
   }
+
+ 
+
+
