--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,17 @@ body {
       font-size: 13px;
     }
   }
-  
+
+iframe {
+  display: block;
+  width: 100%;
+  height: 60px; /* Change this value to adjust the height of the navbar */
+}
+
+body {
+  margin-top: 60px; /* Change this value to adjust the space between navbar and body content */
+}
+
   
 /**
 #mypfp{
