--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,28 @@
 body {
     background-color: #1a1a1a;
-    overflow: hidden;
+    overflow: auto;
+  }
+    
+  body::-webkit-scrollbar-track {
+    background: transparent;
   }
   
+  body::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+  }
+  
+  /* Handle */
+  body::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  body::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
   #div1 {
     display: flex;
     flex-direction: column;
@@ -24,11 +44,11 @@ body {
 iframe {
   display: block;
   width: 100%;
-  height: 60px; /* Change this value to adjust the height of the navbar */
+  height: 60px;
 }
 
 body {
-  margin-top: 60px; /* Change this value to adjust the space between navbar and body content */
+  margin-top: 60px; 
 }
 
   
