--- a/css/whoami.css
+++ b/css/whoami.css
@@ -31,6 +31,46 @@ span.highlight{
   color:#b30059 !important;
 }
 
+
+a.comptia {
+  color: #b30059 !important;
+  align-items: center;
+  font-weight: bold;
+  font-family: "Space Mono", monospace;
+  letter-spacing: 0.05em;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative; /* Ensure proper positioning for the pseudo-element */
+  transition: color 0.3s ease; /* Add transition for text color change */
+}
+
+a.comptia .underline {
+  position: relative;
+  text-decoration: none;
+}
+
+a.comptia .underline::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #b30059;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  transition: background-color 0.3s ease;
+}
+
+a.comptia:hover .underline::after {
+  background-color: #ffcc99;
+}
+
+a.comptia:hover {
+  color: #ffcc99 !important; /* Text color change on hover */
+}
+
+
+
 span.comptia{
   color:#b30059 !important;
   align-items: center;
@@ -38,3 +78,4 @@ span.comptia{
   font-family: "Space Mono", monospace;
   letter-spacing: 0.05em;
 }
+
